dto_mapper_derive/tests/compile_fail/missing_attribute.rs
use dto_mapper_derive::From;

#[derive(From)]
struct X {}

fn main() {}
